# illef-findex-plugins

./: Cargo.toml  Makefile  README.md
logseq/: Cargo.toml  README.md
logseq/src/: cache.rs  lib.rs  logseq.rs
raindrop/: Cargo.toml
raindrop/src/: lib.rs
raindrop/src/raindrop/: cache.rs  client.rs  types.rs
scripts/: download_favicons.sh  open_browser.sh
translator/: Cargo.toml
translator/src/: lib.rs
unicode_picker/: Cargo.toml
unicode_picker/assets/: symbols.txt
unicode_picker/src/: lib.rs
zotero/: Cargo.toml
zotero/src/: bibtex_loader.rs  lib.rs
