[package]
name = "logseq"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.1"
findex-plugin = "0.8.2"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.0"
thiserror = "1.0"
ureq = { version = "2.9", features = ["json"] }

