[package]
name = "zotero"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.1"
findex-plugin = "0.8.2"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
fake = { version = "2.9.2", features = ["derive"] }
thiserror = "1.0.63"
toml = "0.8.19"
chrono = "0.4.38"
shellexpand = "3.1.0"
serde_json = "1.0.128"
convert_case = "0.6.0"
html-escape = "0.2.13"
html_parser = "0.7.0"

[dev-dependencies]
tempfile = "3.2"
